	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
	CHANGE- The link_bulge secret mode bulges each side of a link independently now
	FIXED - Minor issue with CRLF in map title for Cacti Plugin
	FIXED - Oneway links don't draw the INCOMMENT anymore
	FIXED - DEFAULT SCALE covers 0-100 properly (Thanks Dan Fusselman)
		
0.95b	FIXED - SQL schema issue that upset some mysql versions
	FIXED - Removed sometime-problem debugging code in editor
	FIXED - incorrect jquery path in cacti-picker
	FIXED - INFOURL not used without overlib
	FIXED - 'none' colours on LINKs were broken by typo.
	FIXED - NOTES, INNOTES, OUTNOTES all just flat-out borken in 0.95 and 0.95a
	FIXED - Page title can be incorrect if filehash starts with a digit.
	FIXED - Cacti plugin behaves a little better with auth disabled.

0.95a	FIXED - problem with global map variables. Oops.
	FIXED - few deprecated function references.
	FIXED - couple of tiny docs errors.
	FIXED - bug where INFOURL without OVERLIBGRAPH would be ignored
	CHANGE - Added in a SCALE line in the DEFAULT scale for between 0 and 1. Stops a lot of warnings on low-traffic links.
	CHANGE - Tweaked node cloning in editor - clone is offset in x and y now.

0.95	KNOWN ISSUE - ININFOURL/OUTINFOURL, INOVERLIBGRAPH/OUTOVERLIBGRAPH are not handled well by the editor. If you edit a map that uses these, 
		then the 'in' side of the link will be copied to the 'out' side. New editor will handle this better.
	
	ADDED - you get a warning if you are using values outside of the defined SCALE now.
	ADDED - You can add a 'tag' to a SCALE line, to be used in ICON or LABELs later.
	ADDED - USEICONSCALE - colorize icon images (based on patches from llow)
	ADDED - screenshot mode. "SET screenshot_mode 1" at the top of the map will anonymise all labels, comments and bwlabels.
	ADDED - LABELFONTCOLOR can use a special value of 'contrast' to always contrast with the label colour.